# argparse-c

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  argparse-c.pc.in  conanfile.py  meson.build  meson_options.txt  vcpkg.json  xmake-package.lua  xmake.lua
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_issue.yml  feature_request.yml  help_wanted.yml
.github/workflows/: benchmark.yml  ci.yml  docs.yml  release.yml
benchmarks/: CMakeLists.txt  benchmark.c
cmake/: ArgparseConfig.cmake.in  ArgparseConfigVersion.cmake.in
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: Breadcrumb.vue  index.ts  style.css
docs/api/: actions.md  batch.md  color.md  commands.md  completion.md  config.md  errors.md  format.md  groups.md  i18n.md  json.md  lazy.md  manpage.md  memory.md  mutex.md  namespace.md  options.md  overview.md  parser.md  plugin.md  thread.md  unicode.md  validator-extra.md  validators.md  version.md
docs/examples/: advanced.md  arrays.md  basic.md  cpp.md  enums.md  env-config.md  error-handling.md  flags.md  groups.md  index.md  large-cli.md  options.md  subcommands.md  validators.md
docs/guide/: actions.md  advanced.md  arguments.md  batch.md  color.md  config-files.md  contributing.md  custom-allocators.md  env-vars.md  error-handling.md  faq.md  getting-started.md  groups.md  help-formatting.md  i18n.md  installation.md  internals.md  json.md  lazy.md  manpage.md  memory.md  options.md  overview.md  parser.md  performance.md  plugin.md  positional.md  quick-start.md  shell-completion.md  subcommands.md  thread.md  types.md  unicode.md  validators.md
docs/public/: manifest.json  robots.txt
examples/: CMakeLists.txt  advanced.c  advanced_features.c  arrays.c  basic.c  cpp_basic.cpp  enums.c  env_config.c  error_handling.c  flags.c  groups.c  large_cli.c  options.c  subcommands.c  validators.c
include/argparse-c/: argparse.h  argparse.hpp  argparse_argument.h  argparse_batch.h  argparse_color.h  argparse_command.h  argparse_complete.h  argparse_config.h  argparse_error.h  argparse_format.h  argparse_group.h  argparse_i18n.h  argparse_internal.h  argparse_json.h  argparse_lazy.h  argparse_manpage.h  argparse_memory.h  argparse_mutex.h  argparse_namespace.h  argparse_plugin.h  argparse_thread.h  argparse_types.h  argparse_unicode.h  argparse_validator.h  argparse_validator_extra.h  argparse_version.h
scripts/: format.sh  lint.sh
src/: argparse_action.c  argparse_argument.c  argparse_batch.c  argparse_color.c  argparse_command.c  argparse_complete.c  argparse_config.c  argparse_cpp.cpp  argparse_error.c  argparse_format.c  argparse_group.c  argparse_i18n.c  argparse_internal.c  argparse_internal.h  argparse_json.c  argparse_lazy.c  argparse_manpage.c  argparse_memory.c  argparse_mutex.c  argparse_namespace.c  argparse_parser.c  argparse_plugin.c  argparse_thread.c  argparse_unicode.c  argparse_validator.c  argparse_validator_extra.c  argparse_version.c
tests/: CMakeLists.txt  CMakeLists_test.cmake  CMakeLists_test_quick.cmake  test_actions.c  test_basic.c  test_batch.c  test_color.c  test_commands.c  test_config.c  test_errors.c  test_format.c  test_framework.h  test_groups.c  test_i18n.c  test_json.c  test_lazy.c  test_main.c  test_manpage.c  test_memory.c  test_options.c  test_plugin.c  test_positional.c  test_quick.c  test_suggestions.c  test_thread.c  test_types.c  test_validators_extra.c
